# oop_shopping_list

./: business.docx  main.py  pyproject.toml  shopping_list_data.json  user_info.json
helper/: msg.py
log/: handler.toml
product/: products.py
shopping_list/: shopping_list.py
user/: user.py
